testing/tests/into/incomplete.stderr
error[E0063]: missing field `optional` in initializer of `IntoStruct`
 --> tests/into/incomplete.rs:5:8
  |
5 | #[into("crate::IntoStruct")]
  |        ^^^^^^^^^^^^^^^^^^^ missing `optional`
